# himmel

./: .gitignore  CMakeLists.txt  README.md  go.mod
cmd/himmel/: main.go
db/: input.go  metaCommand.go  statement.go  statement_test.go  table.go  table_test.go
experiment/db/: CMakeLists.txt
experiment/db/include/: DB.hpp  Statement.hpp  Table.hpp  Tuple.hpp
experiment/db/src/: DB.cpp  Table.cpp  Tuple.cpp  main.cpp
include/: Database.hpp  Statement.hpp  Table.hpp  Tuple.hpp
internal/: input.go  metaCommand.go  statement.go
scripts/: build.sh
src/: Database.cpp  Himmel.cpp  Table.cpp
tests/: basic.cpp
tools/: util.go
